- FIX workaround for hibernate bug on transient object deletion - NEW gstool import: schutzbedarf, pers.bez. flag - FIX vererbung schutzbedarf - NEW bsimodel context menu: select all links to current object - NEW double click on link jumps to oroiginal object - FIX performance improvements on db insert (application transaction can now be set manually)
git-svn-id: svn+ssh://svn.verinice.org/data/subversion/svnroot/TRUNK@165 4c0145ca-515c-4d1a-a6bc-f9bd594c3410